Fix spacing

--- a/theme/style.css
+++ b/theme/style.css
@@ -1609,6 +1609,9 @@ h1, h2, h3, .font-game {
 .pb-48 {
   padding-bottom: calc(var(--spacing) * 48);
 }
+.pb-52 {
+  padding-bottom: calc(var(--spacing) * 52);
+}
 .text-center {
   text-align: center;
 }
@@ -1890,11 +1893,6 @@ h1, h2, h3, .font-game {
 @media (width >= 48rem) {
   .md\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-}
-@media (width >= 48rem) {
-  .md\:grid-cols-5 {
-    grid-template-columns: repeat(5, minmax(0, 1fr));
   }
 }
 @media (width >= 48rem) {
